<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_recycle_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:fadeScrollbars="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        tools:context=".create_edit_recipe.CreateEditRecipeActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/label_name_recipe"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_name_recipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/label_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:hint="@string/hint_enter_name_recipe"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/add_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_shape_circle"
                    android:contentDescription="@string/hint_add_ingredient"
                    android:src="@android:drawable/ic_input_add" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_ingredient"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="23dp"
                    android:layout_marginRight="30dp"
                    android:layout_toStartOf="@+id/add_ingredient"
                    app:errorEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:hint="@string/hint_add_ingredient"
                        android:inputType="text" />


                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/container_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/label_cooking"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorLabels"
                android:gravity="center"
                android:text="@string/label_cooking"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/add_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_shape_circle"
                    android:contentDescription="@string/hint_add_ingredient"
                    android:src="@android:drawable/ic_input_add" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_step"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="23dp"
                    android:layout_marginRight="30dp"
                    android:layout_toStartOf="@+id/add_step"
                    app:errorEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:hint="@string/hint_add_step_cooking"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/container_cooking_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/label_ingredients"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/label_ingredients"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/save_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_shape_circle"
            android:onClick="saveRecipe"
            android:text="@string/save_recipe"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>